# WhatTheHell

./: .gitignore  BUILD_SUMMARY.md  CMakeLists.txt  INSTALL.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  build.bat  build.sh  plan.txt  setup.ps1  test.py
include/: error_parser.h  pattern_matcher.h  sanitizer.h
installer/: WTH-Installer.bat  install.ps1  wth-installer.nsi
scripts/: wth-hook.ps1  wth-hook.sh
src/: error_parser.cpp  main.cpp  pattern_matcher.cpp  sanitizer.cpp
